<resources>
    <string name="app_name">HomemadeProductsSale</string>
    <string name="title_app">Homemade Product Sale App</string>
    <string name="create_acc">Create Account</string>
    <string name="name">FULL NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="phone">PHONE</string>
    <string name="register_button">REGISTER</string>
    <string name="login_button">LOGIN</string>
    <string name="go_to_login">ALREADY REGISTERED?LOGIN HERE</string>
    <string name="go_to_register">NEW HERE?CREATE ACCOUNT</string>
    <string name="product_comment">Product Comments</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="restaurant_image">Restaurant image</string>

    <string name="company_name">SAFE PRODUCTS</string>

    <string name="home_text">Since we opened our doors in 2017, SAFE PRODUCTS
        has built its reputation as one of America’s best homemade product sale app.. We believe that
        good products is best enjoyed while staring at your phone.</string>

    <string name="permission_denied">Location permission required</string>
    <string name="product_name">Product Name</string>
    <string name="price_of_the_product">Price of the Product</string>
    <string name="add">Add</string>
    <string name="write_comment">Write Comment</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="hello">Hello</string>
    <string name="print_selected_items">PRINT SELECTED ITEMS</string>
    <string name="search">Search</string>
    <string name="show_questions">Show Questions</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="send_on_channel_1">Send on Channel 1</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="your_profile">Your Profile</string>
    <string name="how_far_have_you_traveled">How far have you traveled?</string>
    <string name="reminder_for_you">Reminder For You</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="language">Language</string>
    <string name="application">Application</string>
    <string name="about_app">About App</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>


</resources>