<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/walpaper_first"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/title_app"
        android:textColor="#720BCC"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:layout_marginTop="10dp"
        android:text="@string/create_acc"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="317dp"
        android:layout_height="42dp"
        android:background="@android:color/holo_purple"
        android:ems="10"
        android:fontFamily="@font/mukta_vaani_extralight"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.093" />

    <EditText
        android:id="@+id/userMail"
        android:layout_width="317dp"
        android:layout_height="42dp"
        android:background="@android:color/holo_purple"
        android:ems="10"
        android:fontFamily="@font/mukta_vaani_extralight"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.214" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="317dp"
        android:layout_height="42dp"
        android:background="@android:color/holo_purple"
        android:ems="10"
        android:fontFamily="@font/mukta_vaani_extralight"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.34" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="317dp"
        android:layout_height="42dp"
        android:background="@android:color/holo_purple"
        android:ems="10"
        android:fontFamily="@font/mukta_vaani_extralight"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.465" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="187dp"
        android:layout_height="57dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhone"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_login"
        android:fontFamily="@font/berkshire_swash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        app:layout_constraintVertical_bias="0.060000002" />

</androidx.constraintlayout.widget.ConstraintLayout>