<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddIdeaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddActivity"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            />

    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/productName_input"
        android:layout_width="337dp"
        android:layout_height="67dp"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/priceProduct_input"
        android:layout_width="337dp"
        android:layout_height="67dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/price_of_the_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productName_input" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        android:background="@color/followingBg"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceProduct_input" />

</androidx.constraintlayout.widget.ConstraintLayout>